vm_args.c: non-symbol keys in kwrest

* vm_args.c (keyword_hash_p, args_pop_keyword_hash): if no
  keywords arguments, return the whole last hash.

* vm_args.c (args_pop_keyword_hash): merge the popped last hash to
  rest keywords hash.

* vm_args.c (setup_parameters_complex): include non-symbol keys in
  the rest keywords hash.  [Bug #10699]