vm_args.c
@@ -172,10 +172,15 @@ args_rest_array(struct args_info *args)
 }
 
 static int
-keyword_hash_p(VALUE *kw_hash_ptr, VALUE *rest_hash_ptr, rb_thread_t *th)
+keyword_hash_p(VALUE *kw_hash_ptr, VALUE *rest_hash_ptr, rb_thread_t *th, const int has_kw)
 {
     *rest_hash_ptr = rb_check_hash_type(*kw_hash_ptr);
 
+    if (!has_kw) {
+	*kw_hash_ptr = *rest_hash_ptr;
+	*rest_hash_ptr = 0;
+	return !NIL_P(*kw_hash_ptr);
+    }
     if (!NIL_P(*rest_hash_ptr)) {
 	VALUE hash = rb_extract_keywords(rest_hash_ptr);
 	if (!hash) hash = Qnil;
@@ -189,7 +194,7 @@ keyword_hash_p(VALUE *kw_hash_ptr, VALUE *rest_hash_ptr, rb_thread_t *th)
 }
 
 static VALUE
-args_pop_keyword_hash(struct args_info *args, VALUE *kw_hash_ptr, rb_thread_t *th)
+args_pop_keyword_hash(struct args_info *args, VALUE *kw_hash_ptr, VALUE *rest_hash_ptr, rb_thread_t *th, const int has_kw)
 {
     VALUE rest_hash;
 
@@ -198,8 +203,8 @@ args_pop_keyword_hash(struct args_info *args, VALUE *kw_hash_ptr, rb_thread_t *t
 	VM_ASSERT(args->argc > 0);
 	*kw_hash_ptr = args->argv[args->argc-1];
 
-	if (keyword_hash_p(kw_hash_ptr, &rest_hash, th)) {
-	    if (rest_hash) {
+	if (keyword_hash_p(kw_hash_ptr, &rest_hash, th, has_kw)) {
+	    if (rest_hash && (rest_hash_ptr ? (*rest_hash_ptr = rest_hash, 0) : 1)) {
 		args->argv[args->argc-1] = rest_hash;
 	    }
 	    else {
@@ -214,8 +219,8 @@ args_pop_keyword_hash(struct args_info *args, VALUE *kw_hash_ptr, rb_thread_t *t
 	if (len > 0) {
 	    *kw_hash_ptr = RARRAY_AREF(args->rest, len - 1);
 
-	    if (keyword_hash_p(kw_hash_ptr, &rest_hash, th)) {
-		if (rest_hash) {
+	    if (keyword_hash_p(kw_hash_ptr, &rest_hash, th, has_kw)) {
+		if (rest_hash && (rest_hash_ptr ? (*rest_hash_ptr = rest_hash, 0) : 1)) {
 		    RARRAY_ASET(args->rest, len - 1, rest_hash);
 		}
 		else {
@@ -385,7 +390,7 @@ args_setup_kw_parameters_lookup(const ID key, VALUE *ptr, const VALUE *const pas
 
 static void
 args_setup_kw_parameters(VALUE* const passed_values, const int passed_keyword_len, const VALUE *const passed_keywords,
-			 const rb_iseq_t * const iseq, VALUE * const locals)
+			 const rb_iseq_t * const iseq, VALUE * const locals, VALUE rest_hash)
 {
     const ID *acceptable_keywords = iseq->body->param.keyword->table;
     const int req_key_num = iseq->body->param.keyword->required_num;
@@ -443,11 +448,26 @@ args_setup_kw_parameters(VALUE* const passed_values, const int passed_keyword_le
 
     if (iseq->body->param.flags.has_kwrest) {
 	const int rest_hash_index = key_num + 1;
-	locals[rest_hash_index] = make_unused_kw_hash(passed_keywords, passed_keyword_len, passed_values, FALSE);
+	int i;
+	if (NIL_P(rest_hash)) rest_hash = rb_hash_new();
+	for (i=0; i<passed_keyword_len; i++) {
+	    VALUE val = passed_values[i];
+	    if (val != Qundef) {
+		rb_hash_aset(rest_hash, ID2SYM(passed_keywords[i]), val);
+	    }
+	}
+	locals[rest_hash_index] = rest_hash;
     }
     else {
 	if (found != passed_keyword_len) {
-	    VALUE keys = make_unused_kw_hash(passed_keywords, passed_keyword_len, passed_values, TRUE);
+	    int i;
+	    VALUE keys = rb_ary_tmp_new(1);
+
+	    for (i=0; i<passed_keyword_len; i++) {
+		if (passed_values[i] != Qundef) {
+		    rb_ary_push(keys, ID2SYM(passed_keywords[i]));
+		}
+	    }
 	    argument_kw_error(GET_THREAD(), iseq, "unknown", keys);
 	}
     }
@@ -514,6 +534,7 @@ setup_parameters_complex(rb_thread_t * const th, const rb_iseq_t * const iseq,
     struct args_info args_body, *args;
     VALUE keyword_hash = Qnil;
     VALUE * const orig_sp = th->cfp->sp;
+    VALUE rest_hash = Qnil;
     unsigned int i;
 
     /*
@@ -613,7 +634,8 @@ setup_parameters_complex(rb_thread_t * const th, const rb_iseq_t * const iseq,
     if (given_argc > min_argc &&
 	(iseq->body->param.flags.has_kw || iseq->body->param.flags.has_kwrest) &&
 	args->kw_argv == NULL) {
-	if (args_pop_keyword_hash(args, &keyword_hash, th)) {
+	VALUE *rest_hash_ptr = iseq->param.flags.has_kwrest ? &rest_hash : NULL;
+	if (args_pop_keyword_hash(args, &keyword_hash, rest_hash_ptr, th, iseq->param.flags.has_kw)) {
 	    given_argc--;
 	}
     }
@@ -651,7 +673,8 @@ setup_parameters_complex(rb_thread_t * const th, const rb_iseq_t * const iseq,
 
 	if (args->kw_argv != NULL) {
 	    const struct rb_call_info_kw_arg *kw_arg = args->kw_arg;
-	    args_setup_kw_parameters(args->kw_argv, kw_arg->keyword_len, kw_arg->keywords, iseq, klocals);
+	    args_setup_kw_parameters(args->kw_argv, kw_arg->keyword_len, kw_arg->keywords,
+				     iseq, klocals, rest_hash);
 	}
 	else if (!NIL_P(keyword_hash)) {
 	    int kw_len = rb_long2int(RHASH_SIZE(keyword_hash));
@@ -662,11 +685,11 @@ setup_parameters_complex(rb_thread_t * const th, const rb_iseq_t * const iseq,
 	    arg.argc = 0;
 	    rb_hash_foreach(keyword_hash, fill_keys_values, (VALUE)&arg);
 	    VM_ASSERT(arg.argc == kw_len);
-	    args_setup_kw_parameters(arg.vals, kw_len, arg.keys, iseq, klocals);
+	    args_setup_kw_parameters(arg.vals, kw_len, arg.keys, iseq, klocals, rest_hash);
 	}
 	else {
 	    VM_ASSERT(args_argc(args) == 0);
-	    args_setup_kw_parameters(NULL, 0, NULL, iseq, klocals);
+	    args_setup_kw_parameters(NULL, 0, NULL, iseq, klocals, rest_hash);
 	}
     }
     else if (iseq->body->param.flags.has_kwrest) {
